--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "foodio",
+  "homepage": "https://isaackimmi.github.io/foodio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,8 +25,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
